--- a/css/style.css
+++ b/css/style.css
@@ -1651,6 +1651,10 @@ input[type="radio"].visually-hidden {
 
 /* Стилизация основного создержания страницы каталога */
 
+.page-header--page-context {
+  margin-bottom: 20px;
+}
+
 .page-header__breadcrumbs {
   position: relative;
   display: flex;
@@ -1721,6 +1725,46 @@ input[type="radio"].visually-hidden {
   text-transform: uppercase;
   color: #000000;
 }
+
+.setup-product {
+  position: relative;
+}
+
+
+/* стилизация поля-позунка */
+.setup-product__range-value-container {
+  width: 220px;
+  min-height: 80px;
+  background-color: #f7f3ec;
+}
+
+.setup-product__range-settings-line {
+  position: relative;
+  width: 180px;
+  height: 2px;
+  background-color: #d7dcde;
+}
+
+.setup-product__line-depth {
+  width: 151px;
+  height: 2px;
+  background-color: #00ca74;
+}
+
+.setup-product__range-handle {
+  position: absolute;
+  top: -10px;
+  width: 20px;
+  height: 23px;
+  background-image: url("../img/filter-button.svg");
+  cursor: pointer;
+}
+
+.setup-product__range-handle--max-value {
+  left: 140px;
+}
+/* стилизация поля-позунка */
+
 
 .setup-product__group-title {
   font-family: "PTsans", Arial, sans-serif;
