--- a/css/style.css
+++ b/css/style.css
@@ -1740,7 +1740,7 @@ input[type="radio"].visually-hidden {
   box-shadow: 0px 10px 25px 0 rgba(41, 52, 73, 0.5);
 }
 
-.modal--cart-add {
+.modal--cart-add-content {
   display: none;
   z-index: 100;
   position: fixed;
@@ -1752,6 +1752,10 @@ input[type="radio"].visually-hidden {
   width: 460px;
   background: linear-gradient(to bottom, #ff5357 7px,  #ffffff 7px, #ffffff 163px, #f4f4f4 163px);
   box-shadow: 0px 10px 25px 0 rgba(41, 52, 73, 0.5);
+}
+
+.modal--cart-show {
+  display: block;
 }
 
 .modal--cart-add__title {
