--- a/css/style.css
+++ b/css/style.css
@@ -1331,6 +1331,7 @@ input[type="radio"].visually-hidden {
   margin-bottom: 35px;
   width: 300px;
   height: 158px;
+  cursor: pointer;
 }
 
 .contacts__modal-open {
@@ -1704,6 +1705,7 @@ input[type="radio"].visually-hidden {
 }
 
 .modal__button-close {
+  z-index: 3;
   position: absolute;
   top: 16px;
   right: 9px;
@@ -1728,7 +1730,7 @@ input[type="radio"].visually-hidden {
   border-color: red;
 }
 
-.modal--map-location {
+.modal--location-content {
   display: none;
   z-index: 100;
   position: fixed;
@@ -1738,6 +1740,18 @@ input[type="radio"].visually-hidden {
   width: 940px;
   height: 446px; /* т.к. блок содержит только карту с фиксированными размерами, то можно задать блоку фиксированую высоту */
   box-shadow: 0px 10px 25px 0 rgba(41, 52, 73, 0.5);
+}
+
+.modal--location-open {
+  display: block;
+}
+
+.modal--map-location__map-yandex {
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: none;
 }
 
 .modal--cart-add-content {
